🐛(frontend) fix course teaser layout on safari
On Safari, when user launches course teaser in fullscreen mode some DOM elements
appear on the top of the video. It was due to a bug with Safari related to the
animation fill mode applied to the teaser container.

Also an offset was applied to iframe when its content loaded.

--- a/src/frontend/js/components/LtiConsumer/_styles.scss
+++ b/src/frontend/js/components/LtiConsumer/_styles.scss
@@ -5,13 +5,11 @@
     iframe {
       position: absolute;
       height: 100%;
-      object-fit: contain;
-      object-position: center;
     }
   }
 
   & > .lti-consumer {
-    animation: fadeIn 600ms cubic-bezier(0.33, 1, 0.68, 1) forwards;
+    animation: fadeIn 600ms cubic-bezier(0.33, 1, 0.68, 1);
     background-color: #ffffff;
 
     & > form {
